@startuml GymManagementClassDiagram
title Gym Membership Management System -- Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontName Helvetica
skinparam shadowing false
skinparam linetype ortho
left to right direction

' =====================================================================
' Domain
' =====================================================================
class Member <<final>> {
    - id : int
    - name : String
    - email : String
    + Member(id : int, name : String, email : String)
    + getId() : int
    + getName() : String
    + getEmail() : String
    + equals(o : Object) : boolean
    + hashCode() : int
}

class FitnessClass <<final>> {
    - name : String
    - instructor : String
    - dayOfWeek : DayOfWeek
    - startTime : LocalTime
    - durationMinutes : int
    - capacity : int
    - room : String
    - difficulty : Difficulty
    - equipment : List<String>
    - description : String
    - enrolledMembers : List<Member>
    + getName() : String
    + getInstructor() : String
    + getCapacity() : int
    + isFull() : boolean
    + hasMember(m : Member) : boolean
    + getEnrolledMembers() : List<Member>
    + getEnrolmentCount() : int
    ~ addMember(m : Member) : void
    ~ removeMember(m : Member) : void
}

class "FitnessClass.Builder" as Builder {
    - name : String
    - instructor : String
    - dayOfWeek : DayOfWeek = MONDAY
    - startTime : LocalTime = 18:00
    - durationMinutes : int = 60
    - capacity : int = 20
    - room : String = "Main floor"
    - difficulty : Difficulty = INTERMEDIATE
    - equipment : List<String>
    - description : String = ""
    + Builder(name : String, instructor : String)
    + dayOfWeek(d : DayOfWeek) : Builder
    + startTime(t : LocalTime) : Builder
    + durationMinutes(m : int) : Builder
    + capacity(c : int) : Builder
    + room(r : String) : Builder
    + difficulty(d : Difficulty) : Builder
    + addEquipment(item : String) : Builder
    + description(d : String) : Builder
    + build() : FitnessClass
}

enum Difficulty {
    BEGINNER
    INTERMEDIATE
    ADVANCED
}

' =====================================================================
' Subject
' =====================================================================
class Gym <<Subject>> {
    - name : String
    - members : List<Member>
    - classes : List<FitnessClass>
    - observers : List<GymEventObserver>
    - nextMemberId : int
    + Gym(name : String)
    + addObserver(o : GymEventObserver) : void
    + removeObserver(o : GymEventObserver) : void
    + observerCount() : int
    + addMember(name : String, email : String) : Member
    + removeMember(id : int) : void
    + getMember(id : int) : Member
    + getMembers() : List<Member>
    + addClass(c : FitnessClass) : void
    + removeClass(name : String) : void
    + getFitnessClass(name : String) : FitnessClass
    + getClasses() : List<FitnessClass>
    + enrolMemberInClass(memberId : int, className : String) : void
    + dropMemberFromClass(memberId : int, className : String) : void
    - publish(e : GymEvent) : void
}

' =====================================================================
' Pattern abstractions
' =====================================================================
abstract class GymEvent {
    # timestamp : LocalDateTime
    # type : String
    # message : String
    # GymEvent(type : String, message : String)
    + getTimestamp() : LocalDateTime
    + getType() : String
    + getMessage() : String
    + toString() : String
}

interface GymEventObserver {
    + onEvent(event : GymEvent) : void
}

' =====================================================================
' Concrete events
' =====================================================================
class MemberAddedEvent <<final>> {
    - member : Member
    + MemberAddedEvent(m : Member)
    + getMember() : Member
}
class MemberRemovedEvent <<final>> {
    - member : Member
    + MemberRemovedEvent(m : Member)
    + getMember() : Member
}
class ClassAddedEvent <<final>> {
    - fitnessClass : FitnessClass
    + ClassAddedEvent(c : FitnessClass)
    + getFitnessClass() : FitnessClass
}
class ClassRemovedEvent <<final>> {
    - fitnessClass : FitnessClass
    + ClassRemovedEvent(c : FitnessClass)
    + getFitnessClass() : FitnessClass
}
class MemberEnrolledInClassEvent <<final>> {
    - member : Member
    - fitnessClass : FitnessClass
    + MemberEnrolledInClassEvent(m : Member, c : FitnessClass)
    + getMember() : Member
    + getFitnessClass() : FitnessClass
}
class MemberDroppedFromClassEvent <<final>> {
    - member : Member
    - fitnessClass : FitnessClass
    + MemberDroppedFromClassEvent(m : Member, c : FitnessClass)
    + getMember() : Member
    + getFitnessClass() : FitnessClass
}

' =====================================================================
' Concrete observers
' =====================================================================
class ConsoleObserver <<final>> {
    + onEvent(event : GymEvent) : void
}
class AuditFileObserver <<final>> {
    + {static} DEFAULT_PATH : String = "audit.log"
    - path : String
    - warnedOnce : boolean
    + AuditFileObserver()
    + AuditFileObserver(path : String)
    + getPath() : String
    + onEvent(event : GymEvent) : void
}
class InMemoryJournalObserver <<final>> {
    - journal : List<GymEvent>
    + onEvent(event : GymEvent) : void
    + getJournal() : List<GymEvent>
    + size() : int
    + clear() : void
}

' =====================================================================
' Entry point
' =====================================================================
class Main <<final>> {
    + {static} main(args : String[]) : void
}

' =====================================================================
' Relationships
' =====================================================================

' Gym aggregations
Gym "1" o-- "1..*" Member            : registers
Gym "1" o-- "1..*" FitnessClass      : schedules
Gym "1" o-- "1..*" GymEventObserver  : notifies

' Enrolment + value link
FitnessClass "0..*" o-- "0..*" Member : enrols
FitnessClass --> Difficulty           : has

' Builder cluster
FitnessClass +-- Builder
Builder ..> FitnessClass : <<creates>>

' Event inheritance
GymEvent <|-- MemberAddedEvent
GymEvent <|-- MemberRemovedEvent
GymEvent <|-- ClassAddedEvent
GymEvent <|-- ClassRemovedEvent
GymEvent <|-- MemberEnrolledInClassEvent
GymEvent <|-- MemberDroppedFromClassEvent

' Observer implementation
GymEventObserver <|.. ConsoleObserver
GymEventObserver <|.. AuditFileObserver
GymEventObserver <|.. InMemoryJournalObserver

' Publication
Gym ..> GymEvent          : <<publishes>>
Gym ..> GymEventObserver  : onEvent(GymEvent)

' Entry point
Main ..> Gym : <<uses>>

@enduml
